Hotfix, login div out of screen now fixed

--- a/website/static/css/login.css
+++ b/website/static/css/login.css
@@ -50,7 +50,7 @@
   font-family: 'Poppins-Bold', sans-serif;
 }
 
-.login-form .content {
+.login-form .login-inner-content {
   padding: 35px;
   text-align: center;
 }
